added a check in STFileFinder if the directory string ends with /, if it doesnt adds it \n deleted the key_container in Config_Reader and made it so all variables are stored in the normal container, kept the get_path function so no changes have to be done in other classes \n edited the defaultConfig strings so they are up to date \n improved the behavior of the get_ functions in case no matching key can be found, if the log has not been initiated they now print a System.err message displaying the key that couldnt be found and exit afterwars